agenda-api/k8s/agenda-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: stg-agenda-deployment
    namespace: agenda
    labels:
        app: agenda
        tier: frontend
spec:
    replicas: 3
    selector:
        matchLabels:
            app: agenda
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 2
            maxUnavailable: 1
    template:
        metadata:
            labels:
                app: agenda
                tier: frontend
        spec:
            containers:
                - image: gcr.io/alfred-302520/stg-agenda-api:0.1
                  #command: ["sleep 600"]
                  imagePullPolicy: IfNotPresent
                  name: agenda
                  resources: 
                    limits:
                      cpu: 1000
                      memory: 1000Mi
                    requests:
                      cpu: 300m
                      memory: 300Mi          
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
            dnsPolicy: ClusterFirst
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            terminationGracePeriodSeconds: 10
