agenda-api/k8s/agenda-api-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: agenda
    namespace: agenda
    labels:
        app: agenda
        tier: frontend
spec:
    type: NodePort
    ports:
        - port: 3333
    selector:
        app: agenda
        tier: frontend
