agenda-api/k8s/agenda-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: agenda-ssl-ingress
    namespace: agenda
    annotations:
        kubernetes.io/ingress.global-static-ip-name: agenda-ssl-ingress-ip
        networking.gke.io/managed-certificates: agenda-ssl-certificate
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        kubernetes.io/ingress.allow-http: "false"
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "6000"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "6000"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "6000"
        ingress.kubernetes.io/proxy-connect-timeout: "6000"
        ingress.kubernetes.io/proxy-send-timeout: "6000"
        ingress.kubernetes.io/proxy-read-timeout: "6000"
spec:
    rules:
        - host: agendaapi.alfreddelivery.com
          http:
              paths:
                  - backend:
                        serviceName: agenda
                        servicePort: 3333
